# django-mvp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  README.md  avatar.html  codecov.yml  manage.py  package-lock.json  package.json  pyproject.toml  setup_playwright_data.py  tasks.py  temp_daisy.html  todo.md
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: copilot-instructions.md  speckit.bugfix.patch.agent.md  speckit.bugfix.report.agent.md  speckit.bugfix.verify.agent.md  speckit.clarify.agent.md  speckit.plan.agent.md  speckit.refine.diff.agent.md  speckit.refine.propagate.agent.md  speckit.refine.status.agent.md  speckit.refine.update.agent.md
.github/workflows/: auto-merge-dependabot.yml  build.yml  changelog.yml  dependencies.yml  docs.yml  on-release-main.yml  stylesheet.yml  tests.yml
.specify/: extensions.yml  feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
assets/: demo.css  forms.css  tailwind.css
demo/: README.md  __init__.py  apps.py  component_docs.py  context_processors.py  forms.py  menus.py  models.py  settings.py  tables.py  urls.py  views.py
demo/migrations/: 0001_initial.py  0002_add_orderline.py  0003_alter_category_archived_alter_product_category_and_more.py  0004_alter_product_barcode_alter_product_sku_and_more.py
demo/static/: adminlte_variables.scss  bootstrap_variables.scss
demo/templates/: base.html  htmx_demo.html
docs/: ci-workflows.md  components.md  getting-started.md  index.md  inner-layout.md  integrations.md  layout.md  navigation.md  styling.md  views.md
docs/components/: menu.md
mvp/: config.py  context_processors.py  fixtures.py  forms.py  menus.py  renderers.py  utils.py
mvp/integrations/: __init__.py
mvp/static/: _bootstrap_variables.scss
mvp/tailwind/: base.css
mvp/templates/: 400.html  403.html  404.html  500.html  css_helper.html  delete_view.html  detail_view.html  form_view.html  list_view.html  page_view.html  table_view.html
mvp/templatetags/: mvp.py
mvp/views/: __init__.py  base.py  detail.py  edit.py  error.py  extra.py  generic.py  htmx.py  list.py  mixins.py  table.py
skills/django-mvp/: SKILL.md
specs/001-app-components/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-layout-components/: plan.md  quickstart.md  spec.md  tasks.md
specs/002-layout-configuration/: IMPLEMENTATION-COMPLETE.md  plan.md  research.md  spec.md  tasks.md
specs/002-page-components/: spec.md
specs/003-base-mixin-classes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-default-widgets/: data-model.md  spec.md  tasks.md
specs/004-site-navigation/: data-model.md  plan.md  research.md  tasks.md
specs/004-zero-config-views/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-model-resolution-mixin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-navbar-widgets/: plan.md  tasks-old-scope.md  tasks-previous.md  tasks.md
specs/006-crud-directory-mixin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-page-layout/: plan.md  quickstart.md  tasks.md
specs/007-datatables-integration/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/007-object-page-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-list-view/: data-model.md  plan.md  tasks.md
specs/008-pytest-django-fixtures/: plan.md  tasks.md
specs/008-safe-post-submit-redirect/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-form-view-base/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-form-view-mixin/: plan.md  research.md  tasks.md
specs/00x-layout-configuration/: MANUAL_TESTING.md  data-model.md  quickstart.md
specs/010-cotton-layout-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-mvp-form-view/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-mvp-create-view/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-page-components/: spec.md
specs/012-mvp-update-view/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-mvp-delete-view/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-list-search-ordering/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-mvp-list-view/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-django-error-pages/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-mobile-footer-nav/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-vendor-adminlte-scss/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-brand-logo-templatetags/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/020-htmx-form-mixin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py  settings.py  test_brand_integration.py  test_c_app.py  test_c_app_footer.py  test_c_app_header.py  test_c_app_main.py  test_c_app_menu.py  test_c_app_sidebar.py  test_c_app_sidebar_header.py  test_c_app_sidebar_toggle.py  test_e2e_brand.py  test_renderers.py  test_smoke.py  test_static_assets.py  test_templatetags.py  test_ui_theme.py
(+361 files in other folders)
