[project]
name = "django-mvp"
description = "MVP framework for Django - scaffold production-ready applications with sophisticated layouts and UI patterns designed for data-centric applications."
license = "MIT"
keywords = [
    "django",
    "mvp",
    "minimum viable product",
    "bootstrap",
    "layouts",
    "portal",
    "research",
    "data",
    "scaffold",
]
dynamic = ["version", "classifiers"]
readme = "README.md"
authors = [{ name = "Sam", email = "samuel.scott.jennings@gmail.com" }]
requires-python = '>=3.12,<4.0'
dependencies = [
    'django (>=5.2)',                       # only actively supported Django releases
    "django-cotton (==2.6.1)",
    "django-flex-menus (>=0.4.2,<0.5.0)",
    'django-easy-icons (>=0.5)',
    'django-compressor (>=4.5.1,<5.0.0)',
    'django-libsass (>=0.9,<0.10)',
    "django-cotton-bs5 (>=0.10.0,<0.11.0)",
]

[project.urls]
homepage = "https://github.com/SamuelJennings/django-mvp"
repository = "https://github.com/SamuelJennings/django-mvp"


[tool.poetry]
version = "0.7.0"
packages = [{ include = "mvp" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-poetry = '>=2.0,<3.0'

[tool.poetry.group.test.dependencies]
Django = ">=5.2"
fairdm-dev-tools = { git = "https://github.com/FAIR-DM/dev-tools", extras = [
    "test",
] }

[tool.poetry.group.dev.dependencies]
Django = ">=5.2"
django-distill = "^3.0"
django-formset = "^2.2"
django-filter = "^25.2"
django-crispy-forms = "^2.4"
crispy-bootstrap5 = "^2025.6"
fairdm-dev-tools = { git = "https://github.com/FAIR-DM/dev-tools", extras = [
    "test",
    "dev",
] }
django-tables2 = "^3.0.0"
beautifulsoup4 = ">=4.0"
dj-urls-panel = "^0.2.0"
django-watchfiles = "^1.4.0"
django-htmx = ">=1.0,<2.0"

[build-system]
requires = ['poetry-core (>=2.0,<3.0)']
build-backend = "poetry.core.masonry.api"

[tool.deptry]

[tool.deptry.package_module_name_map]
# Map PyPI package names to their actual importable module names where they differ
django-flex-menus = ["flex_menu"]
django-filter = ["django_filters"]
django-easy-icons = ["easy_icons"]
django-compressor = ["compressor"]

[tool.deptry.per_rule_ignores]
# These packages are used indirectly (INSTALLED_APPS, templates, sass pipeline)
DEP002 = [
    "django-cotton-bs5",
    "django-flex-menus",
    "django-easy-icons",
    "django-compressor",
    "django-libsass",
]
# django-filter is a dev dep used only in the Demo App, not the published package
DEP001 = ["invoke"]
DEP003 = ["invoke"]
DEP004 = ["django_filters", "django_tables2", "django_htmx"]

[tool.ruff]
target-version = "py313"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*.py",
    "staticfiles/*",
    "docs/",
    ".github/",
]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # ClassAttributesShouldBeAnnotated
    "RUF012",
    "TRY003",
    # Use of mark_safe
    "S308",
    # Use of standard pseudo-random generators
    "S311",
    "A003",
    "F403",
    "F405",
    "C901",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101", "S105"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
line-ending = "lf"
exclude = ["*/migrations/*.py"]

[tool.djlint]
blank_line_after_tag = "c-vars"
close_void_tags = true
custom_html = "c-[\\w.-]+"
format_js = true
format_css = true
indent = 2
max_attribute_length = 50
max_blank_lines = 0
max_line_length = 119
ignore = "H016,H030,H031,H021,D018,H037"
format_attribute_template_tags = false

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.mypy]
strict = false
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "flex_menu",
    "flex_menu.*",
    "django_cotton.*",
    "django_filters.*",
    "django_tables2.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = ["--strict-markers", "--tb=short"]
markers = ["e2e: End-to-end tests using Playwright"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["mvp"]
omit = ["*/tests/*", "*/migrations/*", "*/__pycache__/*", "*/node_modules/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
